@@ -295,7 +295,7 @@ admin_plugin_error_plugin_did_not_register=Das Plugin hat sich nicht registiert.
 admin_plugin_error_plugin_deployment_failed=Das Plugin mit dem Namen {0} konnte nicht gestartet werden.
 admin_plugin_error_plugin_loading_failed=Das Plugin {0} konnte nicht geladen werden.
 admin_plugin_error_plugin_starting_failed=Das Plugin {0} konnte nicht gestartet werden.
-admin_plugin_error_plugin_already_deployed=Das Plugin mit dem Namen "{0}" kann nicht gestartet werden da breits ein Plugin gestartet wurde welche den selben API Namen "{1}" benutzt.
+admin_plugin_error_plugin_already_deployed=Das Plugin mit dem Namen "{0}" kann nicht gestartet werden da breits ein Plugin gestartet wurde welches den selben API Namen "{1}" benutzt.
 admin_plugin_error_plugin_with_id_already_deployed=Das Plugin mit dem Namen "{0}" kann nicht gestartet werden da breits ein anderes Plugin mit der selben Id gestartet wurde.
 admin_plugin_error_wrong_type=Das gefundene Plugin ist kein Gentics Mesh plugin.
 admin_plugin_error_validation_failed_apiname_invalid=Der API Name von Plugin {0} darf keine Leerzeichen oder Slashes enthalten.
