@@ -1,7 +1,0 @@
-package com.gentics.mesh.plugin;
-
-import org.pf4j.ExtensionPoint;
-
-public interface UploadProcessorPlugin extends ExtensionPoint {
-
-}
